2009-10-01  Cyril Robert  <crobert@inverse.ca>

	* SoObjects/Mailer/SOGoMailFolder.m
	(-appendMessage:inContext:usingId:): we no longer instantiate the
	message to check whether it exists since we trust the fact that we
	would receive an error from NGImap if the creation failed.

2009-10-01  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* Tests/test-maildav.py (DAVMailCollectionTest.testPUT): fixed to
	delete the test collection prior to the test

	* SoObjects/Appointments/SOGoAppointmentFolders.m
	(-proxyFoldersWithWriteAccess:): return an autoreleased
	"proxyFolders" to avoid a leak.

	* Tests/test-maildav.py (DAVMailCollectionTest._putMessage):
	messages have "message/rfc822" mime-type.
	(DAVMailCollectionTest.setUp): use servername

2009-09-30  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/LDAPSource.m (-init): removed "ldapConnection"
	ivar, since we now always use it as an autoreleased local value.
	(-_ldapConnection): modified implementation of
	"_initLDAPConnection" that now returns an autoreleased instance of
	NGLdapConnection or nil.

	* UI/MailerUI/UIxMailMainFrame.m (-_setupContext): if
	"moduleSettings" is non-nil, we don't reset it in the user
	defaults.
	(-composeAction): autorelease "addresses" to avoid a leak.

2009-09-29  Cyril Robert <crobert@inverse.ca>

	* SoObjects/Mailer/SOGoMailFolder.m (PUTAction:, _appendMessageData:usingId:):
	Added new methods to enable MailDAV PUT on a collection.
	* SoObjects/Mailer/SOGoMailBaseObject.m (IMAP4IDFromAppendResult:): Moved
	here, since SOGoDraftObject and SOGoMailFolder need it.
	* SoObjects/Mailer/SOGoDraftObject.m (_IMAP4IDFromAppendResult): Removed, 
	replaced by [SOGoMailBaseObject IMAP4IDFromAppendResult:].
	* SoObjects/SOGo/SOGoObject.m: Changed file extension from "mail" to "eml".
	* SoObjects/Mailer/SOGoMailAccount.m: Added accountName to fix errors in MailDAV.
	* SoObjects/Mailer/SOGoMailAccounts.m: Added management for account names
	to fix errors in MailDAV.